fix: prevent overflow bouncing on desktop and mobile (#1743)
* fix: prevent overflow bouncing on desktop and mobile

* fix: add black bg to webview for debugging purposes

--- a/packages/web/src/stylesheets/_main.scss
+++ b/packages/web/src/stylesheets/_main.scss
@@ -55,6 +55,7 @@ body {
 
 * {
   box-sizing: border-box;
+  overscroll-behavior: none;
 }
 
 .uppercase {
